Fix glow-clipping
Fixes #100

--- a/src/Stylings/Lyrics.scss
+++ b/src/Stylings/Lyrics.scss
@@ -498,14 +498,14 @@
 
 			width: 50cqw;
 
-			right: -47.5vw;
+			right: -46.5vw; // -47.5vw
 			left: unset;
 		}
 
 		.Lyrics {
 			line-height: 1.75cqh;
 
-			padding-left: 0px;
+			padding-left: 1vw;
 			padding-right: 0px;
 			margin-bottom: 50cqh;
 		}
